--- a/client/src/app/employees/employees.component.html
+++ b/client/src/app/employees/employees.component.html
@@ -3,28 +3,30 @@
 
 <div class = "container">
 	<h2 class = "page-header"> Add Employee </h2>
-	<form (submit) = "addContact()">
+	<!--<form (submit) = "addContact()">-->
+	<form (ngSubmit)="onSubmit()" #employeeForm="ngForm">
 		<div class = "form-group">
-			<label>First Name</label>
+			<label for="first_name">First Name</label>
 			<input type = "text" [(ngModel)] = "first_name" name = "first_name" class = "form-control">
 		</div>
                 <div class = "form-group">
-                        <label>Last Name</label>
+                        <label for="last_name">Last Name</label>
                         <input type = "text" [(ngModel)] = "last_name" name = "last_name" class = "form-control">
                 </div>
                 <div class = "form-group">
-                        <label>Address</label>
+                        <label for="address">Address</label>
                         <input type = "text" [(ngModel)] = "address" name = "address" class = "form-control">
                 </div>
                 <div class = "form-group">
-                        <label>Company</label>
+                        <label for="company">Company</label>
                         <input type = "text" [(ngModel)] = "company" name = "company" class = "form-control">
                 </div>
                 <div class = "form-group">
-                        <label>Salary</label>
+                        <label for="salary">Salary</label>
                         <input type = "text" [(ngModel)] = "salary" name = "salary" class = "form-control">
                 </div>
-		<input type = "submit" class = "btn btn btn-success" value="Add">
+		<!--<input type = "submit" class = "btn btn btn-success" value="Add">-->
+		<button type="button" class="btn btn-default" (click)="addEmployee(); employeeForm.reset()">Add</button>
 	</form>
 </div>
 </div>
