--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1>Employees App</h1>
-<app-employees></app-employees>
-<app-companies></app-companies>
+<app-employees (employeeAddedEvent)="childAddedEmployee($event)"></app-employees>
+<app-companies #companyChild ></app-companies>
