--- a/client/src/app/employees/employees.component.html
+++ b/client/src/app/employees/employees.component.html
@@ -1,10 +1,32 @@
 <div class = "row">
-<div class = "col-md-6">
+<div class = "col-md-3">
 
 <div class = "container">
 	<h2 class = "page-header"> Add Employee </h2>
 	<!--<form (submit) = "addContact()">-->
-	<form (ngSubmit)="onSubmit()" #employeeForm="ngForm">
+	<form #form="ngForm" (ngSubmit)="addEmployee(form.value)" >
+                <div class = "form-group">
+                        <label>First Name</label><br>
+                        <input type = "text" name = "first_name" [(ngModel)]="first_name">
+                </div>
+                <div class = "form-group">
+			<label>Last Name</label><br>
+                        <input type = "text" name = "last_name" [(ngModel)]="last_name">
+                </div>
+                <div class = "form-group">
+			<label>address</label><br>
+                        <input type = "text" name = "address" [(ngModel)]="address">
+                </div>
+                <div class = "form-group">
+			<label>company</label><br>
+                        <input type = "text" name = "company" [(ngModel)]="company">
+                </div>
+                <div class = "form-group">
+			<label>salary</label><br>
+                        <input type = "number" name = "salary" [(ngModel)]="salary">
+                </div>
+
+<!--
 		<div class = "form-group">
 			<label for="first_name">First Name</label>
 			<input type = "text" [(ngModel)] = "first_name" name = "first_name" class = "form-control">
@@ -25,20 +47,33 @@
                         <label for="salary">Salary</label>
                         <input type = "text" [(ngModel)] = "salary" name = "salary" class = "form-control">
                 </div>
-		<!--<input type = "submit" class = "btn btn btn-success" value="Add">-->
-		<button type="button" class="btn btn-default" (click)="addEmployee(); employeeForm.reset()">Add</button>
+-->
+		<button type = "submit">Submit</button>
+		<!--<button type="button" class="btn btn-default" (click)="addEmployee(); employeeForm.reset()">Add</button>-->
 	</form>
 </div>
 </div>
-<div class = "col-md-6">
-<div class = "container">
+<div class = "col-md-9">
         <h2 class = "page-header"> List of Employees </h2>
-        <br>
-	<div *ngFor = "let employee of employees">
-                <div class = "col-md-12">
-                        {{employee.first_name}} {{employee.last_name}} | {{employee.address}} | {{employee.company}} | {{employee.salary}}
-                </div>
-        </div>
-</div>
+	
+  <ul class="list-group">
+      <li class="list-group-item row">
+	<div class = "row">
+          <div class="col-xs-3 col-sm-3"><strong>Name </strong></div>
+          <div class="col-xs-3 col-sm-3"><strong>Address </strong></div>
+          <div class="col-xs-3 col-sm-3"><strong>Company </strong></div>
+          <div class="col-xs-3 col-sm-3"><strong>Salary</strong></div>
+	</div>
+      </li>
+      <li *ngFor = "let employee of employees" class="list-group-item row">
+	<div class="row">
+          <div class="col-xs-3 col-sm-3">{{employee.first_name}} {{employee.last_name}} </div>
+          <div class="col-xs-3 col-sm-3">{{employee.address}} </div>
+          <div class="col-xs-3 col-sm-3">{{employee.company}} </div>
+          <div class="col-xs-3 col-sm-3">{{employee.salary}} </div>
+	</div>
+      </li>
+  </ul>
+
 </div>
 </div>
