--- a/client/src/app/employees/employees.component.html
+++ b/client/src/app/employees/employees.component.html
@@ -3,7 +3,7 @@
 
 <div class = "container">
 	<h2 class = "page-header"> Add Employee </h2>
-	<!--<form (submit) = "addContact()">-->
+	<!--form for submitting employee -->
 	<form #form="ngForm" (ngSubmit)="addEmployee(form.value)" >
                 <div class = "form-group">
                         <label>First Name</label><br>
@@ -26,37 +26,18 @@
                         <input type = "number" name = "salary" [(ngModel)]="salary">
                 </div>
 
-<!--
-		<div class = "form-group">
-			<label for="first_name">First Name</label>
-			<input type = "text" [(ngModel)] = "first_name" name = "first_name" class = "form-control">
-		</div>
-                <div class = "form-group">
-                        <label for="last_name">Last Name</label>
-                        <input type = "text" [(ngModel)] = "last_name" name = "last_name" class = "form-control">
-                </div>
-                <div class = "form-group">
-                        <label for="address">Address</label>
-                        <input type = "text" [(ngModel)] = "address" name = "address" class = "form-control">
-                </div>
-                <div class = "form-group">
-                        <label for="company">Company</label>
-                        <input type = "text" [(ngModel)] = "company" name = "company" class = "form-control">
-                </div>
-                <div class = "form-group">
-                        <label for="salary">Salary</label>
-                        <input type = "text" [(ngModel)] = "salary" name = "salary" class = "form-control">
-                </div>
--->
 		<button type = "submit">Submit</button>
-		<!--<button type="button" class="btn btn-default" (click)="addEmployee(); employeeForm.reset()">Add</button>-->
 	</form>
 </div>
 </div>
+
+<!--list for displaying employees -->
 <div class = "col-md-9">
+
         <h2 class = "page-header"> List of Employees </h2>
 	
   <ul class="list-group">
+      <!--headers for employee information -->
       <li class="list-group-item row">
 	<div class = "row">
           <div class="col-xs-3 col-sm-3"><strong>Name </strong></div>
@@ -65,6 +46,7 @@
           <div class="col-xs-3 col-sm-3"><strong>Salary</strong></div>
 	</div>
       </li>
+      <!-- employees -->
       <li *ngFor = "let employee of employees" class="list-group-item row">
 	<div class="row">
           <div class="col-xs-3 col-sm-3">{{employee.first_name}} {{employee.last_name}} </div>
